--- a/sass/templates/_feedback.sass
+++ b/sass/templates/_feedback.sass
@@ -1,5 +1,5 @@
 .feedback
-  background: $light url('../img/form-bg.jpg') no-repeat top left
+  background: $light url('../img/form-bg.jpg') no-repeat center / cover
   padding-top: 5.4rem
   padding-bottom: 3rem
   &__container
