--- a/sass/templates/_statistics.sass
+++ b/sass/templates/_statistics.sass
@@ -13,7 +13,7 @@
     margin-top: -7.62rem
     padding: 6rem 4rem
     width: 61%
-    min-height: 20.18rem
+    height: 20.18rem
     background: $light url('../img/statistics/bg.png') no-repeat center
     box-shadow: 0 0 22px 5px rgba(34, 34, 34, 0.05)
   &__item
