--- a/sass/templates/_news.sass
+++ b/sass/templates/_news.sass
@@ -57,6 +57,8 @@
       line-height: 1.645rem
       margin-bottom: 2.3rem
   &__button
+    width: 15rem
+    margin: auto
     text-decoration: none
     margin-left: 0.5rem
     padding: 0.9rem 3.6rem
