--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -236,10 +236,10 @@
     &__description
       left: 50%
       margin-left: -45%
-      margin-top: -21rem
+      margin-top: -12rem
       padding: 0
       width: 90%
-      min-height: 10rem
+      height: 10rem
     &__item
       &--title
         color: $primary
@@ -280,6 +280,12 @@
     &__text
       font-size: 1rem
       line-height: 1rem
+    &__swiper
+      &-button                                   
+        &-prev
+          left: 10px
+        &-next
+          right: 10px
   .news
     padding-bottom: 2rem
     &__image
