--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -3,7 +3,7 @@
 html
   font-size: 16px
 body
-  font-family: 'Ubuntu', sans-serif
+  font-family: 'ubuntu', sans-serif
   font-size: 1rem
 a
   text-decoration: none
@@ -22,6 +22,7 @@ img
     font-weight: 700
     line-height: 2.33rem
     text-align: center
+    letter-spacing: 0.5px
   &__description
     color: $dark
     font-weight: 400
@@ -37,16 +38,28 @@ p
       &::after
         display: none
     &-prev
-      left: 70px
+      left: 88px
       background: url('../img/arrow-prev.svg') no-repeat center
     &-next
       background: url('../img/arrow-next.svg') no-repeat center
       left: auto
-      right: 70px
+      right: 88px
 h2 
   font-weight: 700
   margin-block-start: 0
   margin-block-end: 0
+h3 
+  display: block
+  font-size: 2.25rem
+  font-weight: 700
+  line-height: 2.8rem
+  margin-left: 3.5rem
+  margin-bottom: 2.7re
+  margin-block-start: 0
+  margin-block-end: 0
+  margin-inline-start: 0px
+  margin-inline-end: 0px
+
 
 
 
