--- a/sass/templates/_feedback.sass
+++ b/sass/templates/_feedback.sass
@@ -1,7 +1,7 @@
 .feedback
   background: $light url('../img/form-bg.jpg') no-repeat center / cover
   padding-top: 5.4rem
-  padding-bottom: 3rem
+  padding-bottom: 6.2rem
   &__container
     width: 67%
     margin: auto
@@ -12,7 +12,8 @@
     font-weight: 700
     line-height: 2.8rem
     margin-left: 3.5rem
-    margin-bottom: 2.7rem
+    margin-bottom: 2.3rem
+    letter-spacing: 0.3px
   &__link
     color: $primary
     position: relative
@@ -29,7 +30,7 @@
     display: flex
     &__item
       margin-right: 2.375rem
-      line-height: 2rem
+      line-height: 2.1rem
       color: $secondary
       font-size: 1.125rem
       font-weight: 300
@@ -39,6 +40,7 @@
     font-size: 1.5rem
     font-weight: 600
     line-height: 2.33rem
+    letter-spacing: 0.5px
   &__medium
     font-size: 1.125rem
     font-weight: 600
