--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -7,29 +7,30 @@
   min-height: 52.31rem
   color: $black
   padding-top: 6.562rem
-  padding-bottom: 69rem
+  padding-bottom: 68.5rem
   &__content
-    max-width: 40rem
+    max-width: 41rem
     z-index: 3
-    margin-top: 18rem
+    margin-top: 17.5rem
     margin-left: 3.5rem
     margin-bottom: 10rem
   &__title
     font-size: 3.875‬rem
     font-weight: 700
     line-height: 4.75rem
-    letter-spacing: -0.05rem
+    letter-spacing: -1px
+    margin-bottom: 2.9rem
     &--primary
       color: $primary
       letter-spacing: -0.02rem
   &__text
-    width: 100%
+    width: 35rem
     font-size: 1.2rem
     font-weight: 300
     line-height: 1.75rem
     padding-bottom: 1.3rem
   &__button
-    margin-top: 1rem
+    margin-top: 1.3rem
     margin-left: 0.3rem
     padding: 0.8rem 2.5rem
     border-radius: 25px
@@ -51,22 +52,22 @@
   flex-direction: column
   justify-content: flex-end
   align-items: center
-  margin-left: 3.8rem
-  margin-bottom: 15.5rem
+  margin-left: 3.5rem
+  margin-bottom: 15.4rem
   &::before
       position: absolute
       content: ''
       width: 4px
       height: 620px
       border-radius: 2px
-      top: -658px
+      top: -660px
       left: 0
       background-color: $primary
-      margin-left: 8px
+      margin-left: 12px
   &__link
     position: relative
     display: flex
     align-items: center
-    margin-bottom: 1.81rem
+    margin-bottom: 1.9rem
     
 
