--- a/sass/templates/_news.sass
+++ b/sass/templates/_news.sass
@@ -1,8 +1,9 @@
 .news
   background: $back
-  padding-top: 3.875rem
-  padding-bottom: 5.75rem
+  padding-top: 2.4rem
+  padding-bottom: 5.3rem
   &__title
+    padding-left: 1.5rem
     margin-bottom: 1.812rem
   &__description
     width: 65%
@@ -11,7 +12,7 @@
     color: $dark
     font-weight: 400
     line-height: 1.375rem
-    margin-bottom: 3.56rem
+    margin-bottom: 3.5rem
   &__row
     position: relative
     padding-bottom: 8rem
@@ -51,17 +52,18 @@
       font-size: 1.25rem
       font-weight: 700
       line-height: 1.125rem
-      margin-bottom: 2rem
+      margin-bottom: 1.8rem
+      letter-spacing: 0.3px
     &__text
       font-weight: 300
       line-height: 1.645rem
       margin-bottom: 2.3rem
   &__button
-    width: 15rem
+    width: 13.5rem
     margin: auto
     text-decoration: none
     margin-left: 0.5rem
-    padding: 0.9rem 3.6rem
+    padding: 1rem 2rem
     border-radius: 45px
   &__link
     color: $light
@@ -69,7 +71,7 @@
       color: $primary
   &__swiper
     &-container
-      margin-left: 3rem
+      margin-left: 3.6rem
     &-button                                   
       &-prev, &-next
         width: 56px
