--- a/sass/templates/_prices.sass
+++ b/sass/templates/_prices.sass
@@ -1,5 +1,6 @@
 .prices
-  background: grey url('../img/prices/bg.jpg') no-repeat center / cover
+  background: grey url('../img/prices/bg.jpg') no-repeat 
+  background-position: top 0 left -4rem
   padding-top: 5.31rem
   padding-bottom: 4.56rem
   &__wrap
@@ -15,23 +16,23 @@
     font-size: 1.875rem
     font-weight: 700
     line-height: 2.187rem
+    letter-spacing: 0.5px
     text-align: center
     margin: 0
-    margin-bottom: 2.2rem
+    margin-bottom: 2.1rem
   &__form
     display: flex
     flex-direction: column
     align-items: start
-    justify-content: space-between
+    justify-content: start
     flex-wrap: wrap
     width: 50%
-    height: 80%
+    height: 25rem
     &__button
-      align-self: center
-      margin-top: 2rem
-      margin-bottom: 3.5rem
-      padding: 0.8rem 2.6rem
+      margin-left: 9.93rem
+      padding: 0.9rem 2.6rem
       border-radius: 36px
+      margin-top: 1rem
   &__label
     display: block
     color: $third
@@ -54,7 +55,7 @@
   &__input-group
     position: relative
     width: 100%
-    margin-bottom: 0.2rem
+    margin-bottom: 1.2rem
 ep
   position: absolute
   color: tomato
