--- a/sass/templates/_statistics.sass
+++ b/sass/templates/_statistics.sass
@@ -1,18 +1,20 @@
 .statistics
   position: relative
   width: 100%
-  height: 39.56rem
+  height: 39.6rem
   background: $light url('../img/statistics/video-bg.jpg') no-repeat center / cover
   &__description
     position: absolute
     display: flex
     justify-content: space-between
-    align-items: center
+    align-items: start
     left: 50%
-    margin-left: -31%
+    margin-left: -36.53rem
     margin-top: -7.62rem
-    padding: 6rem 4rem
-    width: 61%
+    padding-top: 6.5rem 
+    padding-left: 3.4rem
+    padding-right: 3.4rem
+    width: 73.06rem
     height: 20.18rem
     background: $light url('../img/statistics/bg.png') no-repeat center
     box-shadow: 0 0 22px 5px rgba(34, 34, 34, 0.05)
