--- a/sass/templates/_avantage.sass
+++ b/sass/templates/_avantage.sass
@@ -1,14 +1,15 @@
 .avantage
   &__row
     align-items: baseline
-    margin: 0 4rem
+    justify-content: space-around
+    margin: 0 1rem
   &__col-30
-    margin-bottom: 2rem
+    margin-bottom: 2.2rem
   &__title
-    margin-top: 5rem
+    margin-top: 5.3rem
     margin-bottom: 2rem
   &__description
-    max-width: 49.81rem
+    max-width: 50rem
     margin: auto
     margin-bottom: 3.5rem
   &__card
@@ -23,6 +24,7 @@
       font-size: 1.25rem
       font-weight: 700
       line-height: 2.33rem
+      margin-bottom: 0.6rem
     &-text
       display: block
       color: $secondary
@@ -31,5 +33,5 @@
       text-align: center
       max-width: 19rem
     &-image
-      margin-bottom: 1rem
+      margin-bottom: 1.1rem
       
