--- a/sass/templates/_cases.sass
+++ b/sass/templates/_cases.sass
@@ -4,6 +4,8 @@
   &__title
     margin-top: 2rem
     margin-bottom: 1.77rem
+    letter-spacing: 0.5px
+    padding-left: 0.9rem
   &__description
     width: 65%
     text-align: center
@@ -11,7 +13,8 @@
     color: $dark
     font-weight: 400
     line-height: 1.375rem
-    margin-bottom: 3.56rem
+    margin-bottom: 3.4rem
+    padding-left: 0.5rem
   &__row
     display: flex
     justify-content: center
@@ -24,8 +27,8 @@
     color: $dark
     margin: auto
     padding-top: 1.8rem
-    padding-left: 2.18rem
-    padding-right: 2.18rem
+    padding-left: 3rem
+    padding-right: 2.7rem
   &__button
     margin: auto
     margin-top: 2.5rem
@@ -50,14 +53,16 @@
       font-weight: 500
       line-height: 1.375rem
       margin-block-end: 0
-      margin-block-start: 0
+      margin-block-start: 0.5rem
     &__text
       line-height: 1.75rem
       margin-bottom: 1.8rem
+      letter-spacing: 1px
       &--green
         color: $green
         font-weight: 700
         line-height: 1.75rem
+        letter-spacing: 1.5px
     &__link
       text-decoration: none
       color: $dark
@@ -67,8 +72,13 @@
     font-size: 1.125rem
     font-weight: 500
     line-height: 1.375rem
+    margin-bottom: 0.8rem
+    margin-left: 1rem
   &__text
     font-size: 0.875rem
     font-weight: 400
     color: $secondary
+    margin-left: 1rem
+  &__img
+    margin-top: 1rem
     
