--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -18,26 +18,26 @@ header
       color: $secondary
       text-transform: uppercase
       font-size: 1.625rem
-      font-weight: 700
-      letter-spacing: 1.7px
+      font-weight: 800
       line-height: 1.187rem
       margin-left: 0.812rem
       transition: 0.4s
+      letter-spacing: 1.5px
       &:hover
         color: $primary
 .nav
   display: flex
-  justify-content: space-around
+  justify-content: start
   align-items: center
-  margin-left: 11.2rem
+  margin-left: 11rem
   &__item
     position: relative
     color: $secondary
     text-decoration: none
     text-transform: uppercase
     font-weight: 300
-    line-height: 1.8rem
-    margin-right: 1.25rem
+    line-height: 2.3rem
+    margin-right: 1.4rem
     &:hover
       &::after
         content: ''
@@ -58,7 +58,7 @@ header
     font-size: 1.125rem
     font-weight: 600
     line-height: 2.33rem
-    margin-right: 1.5rem
+    margin-right: 2.8rem
     transition: 0.4s
     &:hover
       color: $primary
