--- a/sass/templates/_services.sass
+++ b/sass/templates/_services.sass
@@ -10,13 +10,14 @@
   margin-bottom: 2.3rem
   margin-right: 2.3rem
 .services
-  background: $light url('../img/services/services-bg.png') no-repeat center
+  background: $light url('../img/services/services-bg.png') no-repeat 
+  background-position: bottom 8rem left -9.8rem
   padding-bottom: 12rem
   &__title
-    margin-top: 1.7rem
-    margin-bottom: 1.68rem
+    margin-top: 2.1rem
+    margin-bottom: 1.8rem
   &__description
-    width: 65%
+    width: 50.5rem
     text-align: center
     margin: auto
     color: $dark
@@ -39,7 +40,7 @@
       font-size: 1.625rem
       font-weight: 600
       line-height: 2.33rem
-      margin-top: 1rem
+      margin-top: 1.5rem
       margin-bottom: 1.5rem
     &-text
       font-weight: 300
