--- a/sass/templates/_feedback.sass
+++ b/sass/templates/_feedback.sass
@@ -56,6 +56,7 @@
     margin-top: 1.4rem
     margin-left: -0.5rem
     &__button
+      max-width: 15rem
       margin-top: 1.3rem
   &__label
     display: block
@@ -80,6 +81,9 @@
     position: relative
     width: 100%
     margin-bottom: 1.18rem
+  &__h3
+    margin-left: 0
+    margin-bottom: 0
 ef
   position: absolute
   color: $dark
