--- a/sass/templates/_prices.sass
+++ b/sass/templates/_prices.sass
@@ -29,6 +29,7 @@
     width: 50%
     height: 25rem
     &__button
+      max-width: 15rem
       margin-left: 9.93rem
       padding: 0.9rem 2.6rem
       border-radius: 36px
