--- a/css/style.css
+++ b/css/style.css
@@ -318,7 +318,8 @@ template {
   box-shadow: none;
   outline: none;
   padding: 0.7rem 1.9rem;
-  border-radius: 22px; }
+  border-radius: 22px;
+  text-align: center; }
   .button:hover {
     cursor: pointer; }
   .button--primary {
@@ -445,15 +446,13 @@ h3 {
   font-weight: 700;
   line-height: 2.8rem;
   margin-left: 3.5rem;
-  margin-bottom: 2.7re;
+  margin-bottom: 2.7rem;
   -webkit-margin-before: 0;
   margin-block-start: 0;
   -webkit-margin-after: 0;
   margin-block-end: 0;
   -webkit-margin-start: 0px;
-  margin-inline-start: 0px;
-  -webkit-margin-end: 0px;
-  margin-inline-end: 0px; }
+  margin-inline-start: 0px; }
 
 header {
   position: fixed;
@@ -767,6 +766,7 @@ header {
     width: 50%;
     height: 25rem; }
     .prices__form__button {
+      max-width: 15rem;
       margin-left: 9.93rem;
       padding: 0.9rem 2.6rem;
       border-radius: 36px;
@@ -1126,6 +1126,7 @@ ep {
     margin-top: 1.4rem;
     margin-left: -0.5rem; }
     .feedback__form__button {
+      max-width: 15rem;
       margin-top: 1.3rem; }
   .feedback__label {
     display: block;
@@ -1170,6 +1171,9 @@ ep {
     position: relative;
     width: 100%;
     margin-bottom: 1.18rem; }
+  .feedback__h3 {
+    margin-left: 0;
+    margin-bottom: 0; }
 
 ef {
   position: absolute;
@@ -1410,6 +1414,8 @@ em {
     margin-top: 23%; }
   .prices__form {
     width: 100%; }
+    .prices__form__button {
+      margin: auto; }
   .prices__wrap {
     background: #e3fbdd;
     padding-right: 3.25rem; }
@@ -1454,6 +1460,8 @@ em {
       margin: auto; }
     .hero__photo {
       display: none; }
+    .hero__text {
+      width: 90%; }
   .statistics__description {
     left: 50%;
     margin-left: -35%;
@@ -1464,6 +1472,8 @@ em {
     display: none; }
     .statistics__video__play__mobile {
       display: inline-block; }
+  .services__description {
+    width: 90%; }
   .feedback {
     background: #fff;
     padding-bottom: 0; }
@@ -1485,6 +1495,8 @@ em {
   .review__row {
     width: 70%;
     height: 100%; }
+  .review__description {
+    width: 90%; }
   .news {
     padding-bottom: 0; }
     .news__swiper-container {
@@ -1502,7 +1514,14 @@ em {
       height: 21.18rem;
       background: #fff;
       box-shadow: 0 0 10px 3px rgba(34, 34, 34, 0.05);
-      padding: 2.25rem 2.5rem 3.125rem 2.375rem; } }
+      padding: 2.25rem 2.5rem 3.125rem 2.375rem; }
+  .footer__logo__text::after {
+    width: 75%;
+    height: 1px;
+    background: #38393b;
+    bottom: -3rem;
+    left: 50%;
+    margin-left: -37.5%; } }
 
 @media screen and (max-width: 760px) {
   .container {
@@ -1584,7 +1603,7 @@ em {
     left: 50%;
     margin-left: -45%;
     margin-top: -12rem;
-    padding: 0;
+    padding-top: 2rem;
     width: 90%;
     height: 10rem; }
   .statistics__item--title {
