--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -5,6 +5,7 @@
   outline: none
   padding: 0.7rem 1.9rem
   border-radius: 22px
+  text-align: center
   &:hover
     cursor: pointer
   &--primary
