--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -54,11 +54,10 @@ h3
   font-weight: 700
   line-height: 2.8rem
   margin-left: 3.5rem
-  margin-bottom: 2.7re
+  margin-bottom: 2.7rem
   margin-block-start: 0
   margin-block-end: 0
   margin-inline-start: 0px
-  margin-inline-end: 0px
 
 
 
