--- a/css/style.css
+++ b/css/style.css
@@ -1174,6 +1174,13 @@ ep {
   .feedback__h3 {
     margin-left: 0;
     margin-bottom: 0; }
+  .feedback__p {
+    -webkit-margin-before: 0;
+    margin-block-start: 0;
+    -webkit-margin-after: 0;
+    margin-block-end: 0;
+    margin-top: -0.5rem;
+    margin-bottom: 0.6rem; }
 
 ef {
   position: absolute;
@@ -1423,6 +1430,27 @@ em {
     width: 100%; } }
 
 @media screen and (max-width: 994px) {
+  .button:hover {
+    cursor: default; }
+  .button--primary:hover {
+    color: #fff;
+    background-color: #ff5a3c; }
+  .button--light:hover {
+    color: #ff5a3c;
+    background-color: #fff; }
+  .button__link:hover {
+    color: #fff; }
+  .menu__logo__text:hover {
+    color: #38393b; }
+  .nav__item:hover::after {
+    display: none; }
+  .contacts__phone:hover {
+    color: #38393b; }
+  .news__link:hover {
+    color: #fff; }
+  .services__card:hover {
+    cursor: default;
+    border-bottom: none; }
   .feedback__container {
     width: 100%; }
   .nav {
@@ -1581,7 +1609,17 @@ em {
   .primary__swiper-button-next {
     background: url("../img/arrow-next.svg") no-repeat center;
     left: auto;
-    right: 10px; } }
+    right: 10px; }
+  .review {
+    background: #fff;
+    padding-bottom: 2rem; }
+    .review__text {
+      font-size: 1rem;
+      line-height: 1rem; }
+    .review__swiper-button-prev {
+      left: 10px; }
+    .review__swiper-button-next {
+      right: 10px; } }
 
 @media screen and (max-width: 570px) {
   h1 {
@@ -1636,18 +1674,11 @@ em {
     .cases__slide__text {
       line-height: 1rem;
       margin-bottom: 0; }
-  .review {
-    background: #fff;
-    padding-bottom: 2rem; }
-    .review__text {
-      font-size: 1rem;
-      line-height: 1rem; }
-    .review__swiper-button-prev {
-      left: 10px; }
-    .review__swiper-button-next {
-      right: 10px; }
   .news {
     padding-bottom: 2rem; }
+    .news__nav {
+      left: 50%;
+      margin-left: -5.5rem; }
     .news__image {
       display: none; }
     .news__date {
