--- a/sass/templates/_feedback.sass
+++ b/sass/templates/_feedback.sass
@@ -84,6 +84,11 @@
   &__h3
     margin-left: 0
     margin-bottom: 0
+  &__p
+    margin-block-start: 0
+    margin-block-end: 0
+    margin-top: -0.5rem
+    margin-bottom: 0.6rem
 ef
   position: absolute
   color: $dark
