--- a/sass/templates/_modal.sass
+++ b/sass/templates/_modal.sass
@@ -19,7 +19,7 @@
   &__dialog
     position: relative
     max-width: 40rem
-    background: $light url('../img/bg-lines.svg') no-repeat center / cover
+    background: $light 
     box-shadow: 0 0 20px $third
     padding: 3rem
     color: $dark
