--- a/sass/templates/_modalsuccess.sass
+++ b/sass/templates/_modalsuccess.sass
@@ -21,6 +21,8 @@
       position: relative
       max-width: 36.36rem
       padding: 2.357rem 3.5rem 1.928rem
+      background: $light 
+      box-shadow: 0 0 20px $third
       color: $dark
     &__close
       position: absolute
